--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "start": "webpack-dev-server --inline --progress --port 8080",
     "e2e": "tsc && concurrently \"http-server -s\" \"protractor protractor.config.js\" --kill-others --success first",
     "lint": "tslint ./app/**/*.ts -t verbose",
     "lite": "lite-server",
@@ -11,7 +11,9 @@
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
     "test-once": "tsc && karma start karma.conf.js --single-run",
     "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "tsc:w": "tsc -w",
+    "build:dev": "rimraf dist && webpack --config config/webpack.dev.js --progress --profile --bail",
+    "build:prod": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +35,25 @@
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
+    "@types/node": "^6.0.46",
+    "@types/selenium-webdriver": "^2.53.33",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.0.4",
+    "angular2-router-loader": "^0.3.5",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-beta.5",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.3",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
+    "html-webpack-plugin": "^2.16.1",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.4.1",
+    "webpack-merge": "^3.0.0",
+    "font-awesome-webpack": "^0",
+    "font-awesome": "4.3.0",
+    "url-loader": "^0",
+
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
     "typescript": "~2.0.10",
@@ -42,10 +63,7 @@
     "tslint": "^3.15.1",
     "lodash": "^4.16.4",
     "webdriver-manager": "10.2.5",
-    "rimraf": "^2.5.4",
-
-    "@types/node": "^6.0.46",
-    "@types/selenium-webdriver": "^2.53.33"
+    "rimraf": "^2.5.4"
   },
   "repository": {}
 }
