--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "license": "MIT",
   "dependencies": {
     "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
+    "@angular/compiler": "2.4.9",
+    "@angular/compiler-cli": "2.4.9",
+    "@angular/tsc-wrapped": "~0.5.2",
+    "tsickle": "0.2.6",
+    "@angular/core": "~2.4.9",
     "@angular/forms": "~2.4.0",
     "@angular/http": "~2.4.0",
     "@angular/platform-browser": "~2.4.0",
@@ -29,12 +32,12 @@
     "@angular/router": "~3.4.0",
 
     "angular-in-memory-web-api": "~0.2.4",
-    "systemjs": "0.19.40",
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
+    "@ngtools/webpack": "~1.3.0",
     "@types/node": "^6.0.46",
     "@types/selenium-webdriver": "^2.53.33",
     "angular2-template-loader": "^0.6.2",
